--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ raw_data/
 **/__pycache__/
 .env
 .python-version
-smart_reader/weights
+smart_reader/weights/.keep
+smart_reader/weights/yolov5l6.pt
